workflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-deployment
  namespace: default
  labels:
    app: workflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workflow
  template:
    metadata:
      labels:
        app: workflow
    spec:
      containers:
      - name: workflow
        image: eekodevregistry.azurecr.io/eeko-frontend-image-workflow-1712593418108:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: workflow-service
spec:
  type: LoadBalancer
  selector:
    app: workflow
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eeko-api
  namespace: default
  labels:
    app: eeko-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eeko-api
  template:
    metadata:
      labels:
        app: eeko-api
    spec:
      containers:
      - name: eeko-api
        image: eekodevregistry.azurecr.io/eeko-api:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: eeko-api-service
spec:
  type: LoadBalancer
  selector:
    app: eeko-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
