demo-nginx-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-dashboard-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - bdris-dev.gov.bd
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-dashboard-virtualservice
  namespace: istio-system
spec:
  hosts:
    - bdris-dev.gov.bd
  gateways:
    - nginx-dashboard-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: nginx-service.default.svc.cluster.local
            port:
              number: 80
