gatewayandservicr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cd-dashboard-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
     - cd-dev.eeko.ai
    tls:
     credentialName: cd-dev
     maxProtocolVersion: TLSV1_3
     minProtocolVersion: TLSV1_2
     mode: SIMPLE
     cipherSuites:
       - ECDHE-ECDSA-AES128-GCM-SHA256
       - ECDHE-RSA-AES128-GCM-SHA256
       - ECDHE-ECDSA-AES128-SHA
       - AES128-GCM-SHA256
       - AES128-SHA
       - ECDHE-ECDSA-AES256-GCM-SHA384
       - ECDHE-RSA-AES256-GCM-SHA384
       - ECDHE-ECDSA-AES256-SHA
       - AES256-GCM-SHA384
       - AES256-SHA
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cd-dashboard-virtualservice
  namespace: istio-system
spec:
  hosts:
    - cd-dev.eeko.ai
  gateways:
   - cd-dashboard-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
---
## DestinationRule definition
# apiVersion: networking.istio.io/v1beta1
# kind: DestinationRule
# metadata:
#   name: cd-dashboard
#   namespace: istio-system
# spec:
#   host: argocd-argo-cd-server.argo-cd.svc.cluster.local
#   trafficPolicy:
#     tls:
#       mode: SIMPLE
#       credentialName: cd-dev
# ---
# apiVersion: install.istio.io/v1alpha1
# kind: IstioOperator
# metadata:
#   name: example-istiocontrolplane
#   namespace: istio-system
# spec:
#   components:
#     ingressGateways:
#     - name: istio-ingressgateway
#       enabled: true
#       k8s:
#         env:
#         - name: ISTIO_META_USER_SDS
#           value: "true"
#         - name: SDS_ENABLED
#           value: "true"
