kube-dashboard-gateway-virtual.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kube-dashboard-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - kube-dev.eeko.ai
      tls:
        mode: SIMPLE
        credentialName: registry-dev
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kube-dashboard-virtualservice
  namespace: istio-system
spec:
  hosts:
    - kube-dev.eeko.ai
  gateways:
    - kube-dashboard-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
            port:
              number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kubernetes-dashboard
  namespace: istio-system
spec:
  host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
